# dynamic-django-model-generator

./: LICENSE  pyproject.toml  pytest.ini
main/: asgi.py  settings.py  urls.py  wsgi.py
main/apps/tablebuilder/: constants.py  exceptions.py  factories.py  helpers.py  models.py  serializers.py  urls.py  viewsets.py
main/apps/tablebuilder/migrations/: 0001_initial.py
main/apps/tablebuilder/tests/: conftest.py  test_helpers.py  test_viewsets.py
